--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                 <h3>Remoções com Guindaste</h3>
                 <p>Para serviços de alta periculosidade ou que demandem a utilização de cesto aéreo e/ou uso de braço hidráulico para ancoragem.</p>
             </div>
-        </div>
-        <div class="servicosCards">
+        
             <div class="servicosCard">
                 <i class="fa-solid fa-seedling"></i>
                 <h3>Plantio e Transplantio</h3>
@@ -79,7 +78,43 @@
                 <p>Implantação e manutenção de jardins, roçada e capina de gramados, caminhos, trilhas e terrenos baldios. Execução de projetos.</p>
             </div>
         </div>
+        <a href="#">QUERO MEU ORÇAMENTO GRATUITO</a> 
     </aricle>
+    <article class="clientesContainer">
+        <h2>Grandes clientes</h2>
+        <div class="clientesGrid">
+            <div class="clientesLogo">
+                <img src="imgs/logo1.png">
+            </div>
+            <div class="clientesLogo">
+                <img src="imgs/logo2.png">
+            </div>
+            <div class="clientesLogo">
+                <img src="imgs/logo3.png">
+            </div>
+            <div class="clientesLogo">
+                <img src="imgs/logo4.webp">
+            </div>
+            <div class="clientesLogo">
+                <img src="imgs/logo5.png">
+            </div>
+            <div class="clientesLogo">
+                <img src="imgs/logo6.png">
+            </div>
+            <div class="clientesLogo">
+                <img src="imgs/logo7.png">
+            </div>
+            <div class="clientesLogo">
+                <img src="imgs/logo8.png">
+            </div>
+            <div class="clientesLogo">
+                <img src="imgs/logo9.png">
+            </div>
+            <div class="clientesLogo">
+                <img src="imgs/logo10.jpg">
+            </div>
+        </div>
+    </article>
 
 
     <script src="https://kit.fontawesome.com/9deb3ef155.js" crossorigin="anonymous"></script>
