--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
     </aricle>
     <article class="clientesContainer">
         <h2>Grandes clientes</h2>
-        <div class="clientesGrid">
+        <div class="logoClientes">
+            <img src="imgs/logosClientes.png" alt="">
+        </div>
+        <!-- <div class="clientesGrid">
             <div class="clientesLogo">
                 <img src="imgs/logo1.png">
             </div>
@@ -113,7 +116,7 @@
             <div class="clientesLogo">
                 <img src="imgs/logo10.jpg">
             </div>
-        </div>
+        </div> -->
     </article>
 
 
