--- a/index.html
+++ b/index.html
@@ -82,10 +82,7 @@
     </aricle>
     <article class="clientesContainer">
         <h2>Grandes clientes</h2>
-        <div class="logoClientes">
-            <img src="imgs/logosClientes.png" alt="">
-        </div>
-        <!-- <div class="clientesGrid">
+        <div class="clientesGrid">
             <div class="clientesLogo">
                 <img src="imgs/logo1.png">
             </div>
@@ -113,10 +110,21 @@
             <div class="clientesLogo">
                 <img src="imgs/logo9.png">
             </div>
-            <div class="clientesLogo">
+            <div class="clientesLogo" id="ultimaLogo">
                 <img src="imgs/logo10.jpg">
             </div>
-        </div> -->
+        </div>
+    </article>
+    <article class="galeriaContainer">
+        <h2>Galeria</h2>
+        <div class="galeria">
+            <img src="imgs/Galery1.jpg" alt="Imagem de um serviço da Poda Carioca">
+            <img src="imgs/Galery2.png" alt="Imagem de um serviço da Poda Carioca">
+            <img src="imgs/Galery3.png" alt="Imagem de um serviço da Poda Carioca">
+            <img src="imgs/Galery4.jpeg" alt="Imagem de um serviço da Poda Carioca">
+            <img src="imgs/Galery5.jpeg" alt="Imagem de um serviço da Poda Carioca">
+            <img src="imgs/Galery6.jpeg" alt="Imagem de um serviço da Poda Carioca">
+        </div>
     </article>
 
 
