--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <img src="imgs/MainBackgroundLite.webp" alt="Imagem Background">
         <div class="mainContent">
-            <h1>Poda e Remoção de Arvores</h1>
+            <h1>Poda e Remoção de Árvores</h1>
             <h2>Equipe Altamente Qualificada Com Profissionais Especializados</h2>
             <hr>
             <h2>Rio de Janeiro e Região</h2>
@@ -127,7 +127,90 @@
         </div>
     </article>
 
+    <article class="porqueContainer">
+        <img src="imgs/background2.jpg" alt="Imagem de palno de fundo">
+        <h2>Porque escolher a Poda Carioca</h2>
+        <div class="porqueCards">
+            <div class="porqueCard">
+                <i class="fa-solid fa-helmet-safety"></i>
+                <h3>Segurança no<br>trabalho</h3>
+                <p>Somos capacitados nos programas PCSMO e PGR de saúde e gerenciamento de riscos.</p>
+            </div>
+            <div class="porqueCard">
+                <i class="fa-solid fa-clipboard-check"></i>
+                <h3>Segurança no<br>trabalho</h3>
+                <p>Somos capacitados nos programas PCSMO e PGR de saúde e gerenciamento de riscos.</p>
+            </div>
+            <div class="porqueCard">
+                <i class="fa-solid fa-seedling"></i>
+                <h3>Segurança no<br>trabalho</h3>
+                <p>Somos capacitados nos programas PCSMO e PGR de saúde e gerenciamento de riscos.</p>
+            </div>
+            <div class="porqueCard">
+                <i class="fa-solid fa-user-check"></i>
+                <h3>Segurança no<br>trabalho</h3>
+                <p>Somos capacitados nos programas PCSMO e PGR de saúde e gerenciamento de riscos.</p>
+            </div>
+        </div>
+    </article>
 
+    <div class="contatoContainer">
+        <h2>Entre em contato</h2>
+        <article class="contato">
+            <div class="contatoFormContainer">
+                <h3>Envie uma mensagem</h3>
+                <form class="contatoForm">
+                    <input type="text" placeholder="Nome:" id="nome" name="nome" required>
+                    <input type="email" placeholder="E-mail:" id="email" name="email" required>
+                    <input type="tel" placeholder="Telefone:" id="tel" name="tel">
+                    <input type="text" placeholder="Assunto:" id="assunto" name="assunto">
+                    <textarea placeholder="Mensagem:" id="mensagem" name="mensagem"></textarea>
+                    <button type="submit">Enviar</button>
+                </form>
+            </div>
+            <div class="contatoInfoContainer">
+                <div class="contatoInfoCard">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <h3>Atuamos na cidade do Rio de Janeiro, Niterói, Petrópolis e Teresópolis.</h3>
+                </div>
+                <div class="arrowContainer">
+                    <i class="fa-solid fa-chevron-left" id="arrowLeft"></i>
+                    <div class="relacionadosContainer">
+                        <div class="relacionados">
+                            <div class="img">
+                                <img src="imgs/logo ibama.png" alt="Logo do Ibama">
+                            </div>
+                            <div class="img">
+                                <img src="imgs/logo crea.webp" alt="Logo CREA">
+                            </div>
+                            <div class="img">
+                                <img src="imgs/logo fpj.webp" alt="Logo da Fundação Parques e Jardins">
+                            </div>
+                            <div class="img">
+                                <img src="imgs/logo inea.png" alt="Logo INEA">
+                            </div>
+                            <div class="img">
+                                <img src="imgs/logo abnt.webp" alt="Logo ABNT">
+                            </div>
+                            <div class="img">
+                                <img src="imgs/logo ibama.png" alt="Logo do Ibama">
+                            </div>
+                            <div class="img">
+                                <img src="imgs/logo crea.webp" alt="Logo CREA">
+                            </div>
+                            <div class="img">
+                                <img src="imgs/logo fpj.webp" alt="Logo da Fundação Parques e Jardins">
+                            </div>
+
+                        </div>
+                    </div>
+                    <i class="fa-solid fa-chevron-right" id="arrowRight"></i>
+                </div>
+            </div>
+        </article>
+    </div>
+    
     <script src="https://kit.fontawesome.com/9deb3ef155.js" crossorigin="anonymous"></script>
+    <script src="script/imgSlider.js"></script>
 </body>
 </html>
