Implementação do rodapé

--- a/index.html
+++ b/index.html
@@ -209,6 +209,18 @@
             </div>
         </article>
     </div>
+
+    <footer>
+        <img src="imgs/Logo-PodaCarioca-transparente.png" alt="Logo da Poda Carioca">
+        <div class="footerSocialIcons">
+            <i class="fa-brands fa-whatsapp"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-regular fa-envelope"></i>
+        </div>
+        <div class="footerUpIcon">
+            <i class="fa-solid fa-angle-up"></i>
+        </div>
+    </footer>
     
     <script src="https://kit.fontawesome.com/9deb3ef155.js" crossorigin="anonymous"></script>
     <script src="script/imgSlider.js"></script>
