Atualização responsividade e footer

--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
     <footer>
         <img src="imgs/Logo-PodaCarioca-transparente.png" alt="Logo da Poda Carioca">
         <div class="footerSocialIcons">
-            <i class="fa-brands fa-whatsapp"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-regular fa-envelope"></i>
+            <i id="footerWts" class="fa-brands fa-whatsapp"></i>
+            <i id="footerInst" class="fa-brands fa-instagram"></i>
+            <i id="footerEmail" class="fa-regular fa-envelope"></i>
         </div>
         <div class="footerUpIcon">
             <i class="fa-solid fa-angle-up"></i>
