Funcionalidade dos botões e da navbar

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <header>
         <img src="imgs/Logo-PodaCarioca-transparente.png" alt="Logo Poda Carioca">
         <nav class="navBar">
-            <a href="#">Home</a>
-            <a href="#">Serviços</a>
-            <a href="#">Informações</a>
-            <a href="#">Contato</a>
+            <a id="home">Home</a>
+            <a id="services">Serviços</a>
+            <a id="info">Informações</a>
+            <a id="contact">Contato</a>
         </nav>
-        <div class="telBtn"><a href="tel:(21)97996-9931"><i class="fa-solid fa-phone"></i> (21) 97996-9931</a></div>
+        <div class="telBtn"><a href="tel:+5521979969931"><i class="fa-solid fa-phone"></i> (21) 97996-9931</a></div>
     </header>
     <main>
         <img src="imgs/MainBackgroundLite.webp" alt="Imagem Background">
@@ -24,7 +24,7 @@
             <h2>Equipe Altamente Qualificada Com Profissionais Especializados</h2>
             <hr>
             <h2>Rio de Janeiro e Região</h2>
-            <a href="#">SOLICITE SEU ORÇAMENTO GRATUITO</a>
+            <a href="https://api.whatsapp.com/send?phone=5521979969931&text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20um%20or%C3%A7amento%20gratuito.">SOLICITE SEU ORÇAMENTO GRATUITO</a>
         </div>
         <div class="moreInfo">
             <h2>Empresa registrada no CREA e na prefeitura municipal</h2>
@@ -78,7 +78,7 @@
                 <p>Implantação e manutenção de jardins, roçada e capina de gramados, caminhos, trilhas e terrenos baldios. Execução de projetos.</p>
             </div>
         </div>
-        <a href="#">QUERO MEU ORÇAMENTO GRATUITO</a> 
+        <a href="https://api.whatsapp.com/send?phone=5521979969931&text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20um%20or%C3%A7amento%20gratuito.">QUERO MEU ORÇAMENTO GRATUITO</a> 
     </aricle>
     <article class="clientesContainer">
         <h2>Grandes clientes</h2>
@@ -213,9 +213,9 @@
     <footer>
         <img src="imgs/Logo-PodaCarioca-transparente.png" alt="Logo da Poda Carioca">
         <div class="footerSocialIcons">
-            <i id="footerWts" class="fa-brands fa-whatsapp"></i>
-            <i id="footerInst" class="fa-brands fa-instagram"></i>
-            <i id="footerEmail" class="fa-regular fa-envelope"></i>
+            <a href="https://api.whatsapp.com/send?phone=5521979969931&text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20um%20or%C3%A7amento%20gratuito."><i id="footerWts" class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/podacarioca/"><i id="footerInst" class="fa-brands fa-instagram"></i></a>
+            <a href="mailto:contato.podacarioca@gmail.com"><i id="footerEmail" class="fa-regular fa-envelope"></i></a>
         </div>
         <div class="footerUpIcon">
             <i class="fa-solid fa-angle-up"></i>
