Atualização de icones

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <a id="info">Informações</a>
             <a id="contact">Contato</a>
         </nav>
-        <div class="telBtn"><a href="tel:+5521979969931"><i class="fa-solid fa-phone"></i> (21) 97996-9931</a></div>
+        <div class="telBtn">
+            <a href="tel:+5521979969931"> <svg version="1.1" id="fi_483947" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 384 384" style="enable-background:new 0 0 384 384;" xml:space="preserve"> <g> <g> <path d="M353.188,252.052c-23.51,0-46.594-3.677-68.469-10.906c-10.719-3.656-23.896-0.302-30.438,6.417l-43.177,32.594 c-50.073-26.729-80.917-57.563-107.281-107.26l31.635-42.052c8.219-8.208,11.167-20.198,7.635-31.448 c-7.26-21.99-10.948-45.063-10.948-68.583C132.146,13.823,118.323,0,101.333,0H30.813C13.823,0,0,13.823,0,30.813 C0,225.563,158.438,384,353.188,384c16.99,0,30.813-13.823,30.813-30.813v-70.323C384,265.875,370.177,252.052,353.188,252.052z"></path> </g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> <g> </g> </svg> (21) 97996-9931</a>
+        </div>
     </header>
     <main>
         <img src="imgs/MainBackgroundLite.webp" alt="Imagem Background">
@@ -47,33 +49,33 @@
         <h2>O que fazemos</h2>
         <div class="servicosCards">
             <div class="servicosCard">
-                <i class="fa-solid fa-building"></i>
+                <img src="imgs/icons/condominium.svg" alt="Ícone de condomínio">
                 <h3>Poda em Condomínio</h3>
                 <p>Poda de limpeza, desbaste, raleamento, elevação de copa, redução, restauração, para vistas e de palmeiras. Serviço de despachante junto a FPJ.</p>
             </div>
             <div class="servicosCard">
-                <i class="fa-solid fa-tree"></i>
+                <img src="imgs/icons/chainsaw.svg" alt="Ícone de motosserra">
                 <h3>Supressão de Vegetação</h3>
                 <p>Serviço onde realizamos a supressão, destoca, acondicionamento e remoção do material, quando necessário.</p>
             </div>
             <div class="servicosCard">
-                <i class="fa-solid fa-helmet-safety"></i>
+                <img src="imgs/icons/crane.svg" alt="Ícone de guindaste">
                 <h3>Remoções com Guindaste</h3>
                 <p>Para serviços de alta periculosidade ou que demandem a utilização de cesto aéreo e/ou uso de braço hidráulico para ancoragem.</p>
             </div>
         
             <div class="servicosCard">
-                <i class="fa-solid fa-seedling"></i>
+                <img src="imgs/icons/reforestation.svg" alt="Ícone de reflorestamento">
                 <h3>Plantio e Transplantio</h3>
                 <p>Reflorestamento, enriquecimento para a restauração florestal, sistemas agroflorestais. Experiência de 30 anos de reflorestamento através da ONG Florescer.</p>
             </div>
             <div class="servicosCard">
-                <i class="fa-solid fa-bolt"></i>
+                <img src="imgs/icons/flash.svg" alt="Ícone de raio">
                 <h3>Poda Próxima à Rede Elétrica</h3>
                 <p>Os arboristas de nossa empresa são capacitados na Norma Regulamentadora NR-10 e possuem larga experiência em logradouro público.</p>
             </div>
             <div class="servicosCard">
-                <i class="fa-solid fa-leaf"></i>
+                <img src="imgs/icons/gardening.svg" alt="Íconde de jardinagem">
                 <h3>Cuidado de Jardins</h3>
                 <p>Implantação e manutenção de jardins, roçada e capina de gramados, caminhos, trilhas e terrenos baldios. Execução de projetos.</p>
             </div>
@@ -128,28 +130,27 @@
     </article>
 
     <article class="porqueContainer">
-        <img src="imgs/background2.jpg" alt="Imagem de palno de fundo">
         <h2>Porque escolher a Poda Carioca</h2>
         <div class="porqueCards">
             <div class="porqueCard">
-                <i class="fa-solid fa-helmet-safety"></i>
+                <img src="imgs/icons/security-helmet.svg" alt="Ícone de capacete de segurança">
                 <h3>Segurança no<br>trabalho</h3>
                 <p>Somos capacitados nos programas PCSMO e PGR de saúde e gerenciamento de riscos.</p>
             </div>
             <div class="porqueCard">
-                <i class="fa-solid fa-clipboard-check"></i>
-                <h3>Segurança no<br>trabalho</h3>
-                <p>Somos capacitados nos programas PCSMO e PGR de saúde e gerenciamento de riscos.</p>
+                <img src="imgs/icons/high-quality.svg" alt="Ícone de selo de qualidade">
+                <h3>Empresa<br>qualificada</h3>
+                <p>Possuímos as NRs 10, 12 e 35 para trabalho em altura, especializada em arboricultura.</p>
             </div>
             <div class="porqueCard">
-                <i class="fa-solid fa-seedling"></i>
-                <h3>Segurança no<br>trabalho</h3>
-                <p>Somos capacitados nos programas PCSMO e PGR de saúde e gerenciamento de riscos.</p>
+                <img src="imgs/icons/ecology.svg" alt="Ícone de responsabilidade ambiental">
+                <h3>Responsabilidade<br>ambiental</h3>
+                <p>A prática do cuidado das árvores é feita conforme a metodologia da ABNT NBR 16246-1.</p>
             </div>
             <div class="porqueCard">
-                <i class="fa-solid fa-user-check"></i>
-                <h3>Segurança no<br>trabalho</h3>
-                <p>Somos capacitados nos programas PCSMO e PGR de saúde e gerenciamento de riscos.</p>
+                <img src="imgs/icons/trust.svg" alt="Ícone de confiança">
+                <h3>Tradição e<br>confiança</h3>
+                <p>Mais de 20 anos de experiência com Atestados de Capacitação Técnica de grandes empresas.</p>
             </div>
         </div>
     </article>
@@ -170,11 +171,11 @@
             </div>
             <div class="contatoInfoContainer">
                 <div class="contatoInfoCard">
-                    <i class="fa-solid fa-location-dot"></i>
+                    <img src="imgs/icons/maps-and-flags.svg" alt="Íconde de ponto no mapa">
                     <h3>Atuamos na cidade do Rio de Janeiro, Niterói, Petrópolis e Teresópolis.</h3>
                 </div>
                 <div class="arrowContainer">
-                    <i class="fa-solid fa-chevron-left" id="arrowLeft"></i>
+                    <img src="imgs/icons/left-arrow.svg" alt="Ícone de seta" class="arrow" id="arrowLeft">
                     <div class="relacionadosContainer">
                         <div class="relacionados">
                             <div class="img">
@@ -204,7 +205,7 @@
 
                         </div>
                     </div>
-                    <i class="fa-solid fa-chevron-right" id="arrowRight"></i>
+                    <img src="imgs/icons/right-arrow.svg" alt="Ícone de seta" class="arrow" id="arrowRight">
                 </div>
             </div>
         </article>
@@ -213,16 +214,15 @@
     <footer>
         <img src="imgs/Logo-PodaCarioca-transparente.png" alt="Logo da Poda Carioca">
         <div class="footerSocialIcons">
-            <a href="https://api.whatsapp.com/send?phone=5521979969931&text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20um%20or%C3%A7amento%20gratuito."><i id="footerWts" class="fa-brands fa-whatsapp"></i></a>
-            <a href="https://www.instagram.com/podacarioca/"><i id="footerInst" class="fa-brands fa-instagram"></i></a>
-            <a href="mailto:contato.podacarioca@gmail.com"><i id="footerEmail" class="fa-regular fa-envelope"></i></a>
+            <a href="https://api.whatsapp.com/send?phone=5521979969931&text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20um%20or%C3%A7amento%20gratuito."><img src="imgs/icons/whatsapp.svg" alt="Ícone do whatsapp"></a>
+            <a href="https://www.instagram.com/podacarioca/"><img src="imgs/icons/instagram.svg" alt="Ícone do instagram"></a>
+            <a href="mailto:contato.podacarioca@gmail.com"><img src="imgs/icons/mail.svg" alt="Ícone do e-mail"></a>
         </div>
         <div class="footerUpIcon">
-            <i class="fa-solid fa-angle-up"></i>
+            <img src="imgs/icons/up-arrow.svg" alt="Ícone de seta">
         </div>
     </footer>
     
-    <script src="https://kit.fontawesome.com/9deb3ef155.js" crossorigin="anonymous"></script>
     <script src="script/imgSlider.js"></script>
 </body>
 </html>
