--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                             <div class="img">
                                 <img src="imgs/logo crea.webp" alt="Logo CREA">
                             </div>
-                            <div class="img">
+                            <div class="img" id="lastImg">
                                 <img src="imgs/logo fpj.webp" alt="Logo da Fundação Parques e Jardins">
                             </div>
 
